# KiwiCPP

./: .gitignore  .justfile  CMakeLists.txt  README.md  shell.nix
examples/: CMakeLists.txt  example1.cpp
examples/hello/: CMakeLists.txt
include/kiwicpp/: library.hpp
include/my_project/: library.hpp
scripts/: format.sh
src/: CMakeLists.txt  library.cpp
tests/: CMakeLists.txt  test_library.cpp
